--- a/Confluent/connectors/cassandra-sink-connector/config/sink.properties
+++ b/Confluent/connectors/cassandra-sink-connector/config/sink.properties
@@ -33,3 +33,13 @@ transforms.InsertField.static.value= CassandraSinkConnector
 
 #transforms.InsertField.type= org.apache.kafka.connect.transforms.InsertField\$Value
 #transforms.InsertField.timestamp.field= createdTime
+
+#To flatten structure of nested schema/json
+#transforms= flatten
+#transforms.flatten.type= org.apache.kafka.connect.transforms.Flatten\$Value
+#transforms.flatten.delimiter= .
+
+#To remove field from received data on topic
+#transforms= ReplaceField
+#transforms.ReplaceField.type= org.apache.kafka.connect.transforms.ReplaceField\$Value
+#transforms.ReplaceField.blacklist= schema
