--- a/Spring/spring-boot/resilience4j-demo/src/main/resources/application.yml
+++ b/Spring/spring-boot/resilience4j-demo/src/main/resources/application.yml
@@ -1,7 +1,8 @@
+server.port: 8081
 resilience4j.retry:
     instances:
       userService:
         maxRetryAttempts: 5     #will do 4 retry attempts, maxAttempts attribute also working
-        waitDuration: 3s
+        waitDuration: 5s
         retryExceptions:
           - java.lang.Exception
